include_directories(${EUDAQ_INCLUDE_DIRS})

# Define interface library for all EUDAQ modules:
add_subdirectory(example)
add_subdirectory(experimental)
add_subdirectory(eudet)
add_subdirectory(calice)
add_subdirectory(caribou)
add_subdirectory(itkstrip)
add_subdirectory(timepix3)
add_subdirectory(tlu)
add_subdirectory(stcontrol)
add_subdirectory(aidastrip)
add_subdirectory(tbscDESY)
add_subdirectory(MuPix8)
add_subdirectory(piStage)

# Define optional producers
macro(add_optional_subdirectory dir)
    string(TOUPPER ${dir} u_dir)
    option(USER_${u_dir}_BUILD "Build user in directory ${u_dir}?" OFF)
    if(USER_${u_dir}_BUILD OR BUILD_allproducer)
        add_subdirectory(${dir})
        MESSAGE( STATUS "Building producer: " ${u_dir} )
    endif()
endmacro()
add_optional_subdirectory(DRS4)
add_optional_subdirectory(cmspixel)