FIND_PACKAGE(DRS REQUIRED)
IF(DRS_FOUND)
MESSAGE(STATUS "FOUND DRS PATHES")
ELSE(DRS_FOUND)
  MESSAGE(FATAL_ERROR "Could not find DRS! Make sure to set the environment variable $DRS_PATH to the path of your pxar installation!")
ENDIF(DRS_FOUND)

GET_FILENAME_COMPONENT(EUDAQ_USERNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
SET(EUDAQ_MODULE module_${EUDAQ_USERNAME})

INCLUDE_DIRECTORIES(${DRS_INCLUDE_DIRS} ${EUDAQ_INCLUDE_DIRS})
MESSAGE(STATUS "LIBRARY: " ${DRS_LIBRARY})

ADD_SUBDIRECTORY(module)
