FIND_PACKAGE(PXAR REQUIRED)
IF(PXARCORE_FOUND)
  MESSAGE(Found pXar pathes!)
ELSE(PXARCORE_FOUND)
  MESSAGE(FATAL_ERROR "Could not find CMSPixel pxarCore! Make sure to set the environment variable $PXARPATH to the path of your pxar installation!")
ENDIF(PXARCORE_FOUND)

GET_FILENAME_COMPONENT(EUDAQ_USERNAME ${CMAKE_CURRENT_LIST_DIR} NAME)
SET(EUDAQ_MODULE module_${EUDAQ_USERNAME})

INCLUDE_DIRECTORIES(${PXARCORE_INCLUDE_DIRS})
MESSAGE(STATUS "LIBRARY: " ${PXARCORE_LIBRARIES})

ADD_SUBDIRECTORY(module)
