INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src MODULE_SRC)
message(BLUUUUUUUUUUUB ${MODULE_SRC})

ADD_LIBRARY(${EUDAQ_MODULE} SHARED ${MODULE_SRC} )
TARGET_LINK_LIBRARIES(${EUDAQ_MODULE} ${EUDAQ_CORE_LIBRARY} ${EUDAQ_TTREE_LIBRARY} ${DRS_LIBRARY})

INSTALL(TARGETS
        ${EUDAQ_MODULE}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)